2009-01-04  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* src/animation.c:
	* src/animation.h:
	* src/cairo-support.c:
	* src/cairo-support.h:
	* src/murrine_draw.c:
	* src/murrine_draw.h:
	* src/murrine_draw_rgba.c:
	* src/murrine_rc_style.c:
	* src/murrine_rc_style.h:
	* src/murrine_style.c:
	* src/murrine_style.h:
	* src/murrine_theme_main.c:
	* src/murrine_types.h:
	* src/support.c:
	* src/support.h:
	Updated Copyright notes for 2009.

2009-01-04  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* src/murrine_draw.c (murrine_draw_entry):
	* src/murrine_draw_rgba.c (murrine_rgba_draw_entry):
	Better GtkEntry focus.

2009-01-04  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* src/cairo-support.c (murrine_draw_lightborder),
	(murrine_draw_glaze):
	Removed horizontal parameter to lightborder,
	this fixes spinbuttons, but could break vertical widgets,
	please test and report bugs if you see a misplacement
	of the lightborder.

2009-01-04  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* src/murrine_draw.c (murrine_draw_radiobutton),
	(murrine_draw_checkbox):
	* src/murrine_draw_rgba.c (murrine_rgba_draw_radiobutton),
	(murrine_rgba_draw_checkbox):
	Changed inactive disabled checkbutton/radiobutton:
	no background is drawn.

2009-01-03  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* src/murrine_draw.c (murrine_draw_radiobutton),
	(murrine_draw_checkbox):
	* src/murrine_draw_rgba.c (murrine_rgba_draw_radiobutton),
	(murrine_rgba_draw_checkbox):
	Fancy new checkbutton and new radiobutton.

2009-01-03  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* src/murrine_draw.c (murrine_draw_button):
	* src/murrine_draw_rgba.c (murrine_rgba_draw_button):
	Small performance improvement in button's drawing.

2009-01-03  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* src/murrine_draw.c (murrine_draw_list_view_header):
	Better listview header (uses lightborder) when glazestyle != 0.

2009-01-03  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* src/murrine_draw.c (murrine_draw_inset):